Update index.html code

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <p>
           This project was coded by
           <a href="https://github.com/rudomachsi" target="_blank">Rudo Machisi</a> and is
-          <a href="https://github.com/rudomachsi/my-awesome-project/blob/main/index.html" target="_blank"> on GitHub</a> and
-          <a href="https://66b74ee9ac04080008ccacb0--willowy-trifle-6beb5d.netlify.app/" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/rudomachsi/my-first-project/blob/main/src/style.css" target="_blank"> on GitHub</a> and
+          <a href="https://main--velvety-fudge-7c0622.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
